[project]
name = "chef-agent-lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi[standard]>=0.129.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain[standard]>=1.2.10",
    "langgraph>=1.0.9",
    "dotenv>=0.9.9",
    "langchain-tavily>=0.2.17",
]
